[project]
name = "sentinelgraph"
version = "0.1.0"
description = "Organizational security memory and causality engine"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
sentinelgraph = "sentinelgraph.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
